--- a/templates/jui/page/doc/view/abstract.html
+++ b/templates/jui/page/doc/view/abstract.html
@@ -9,7 +9,7 @@
 <p>AbstractView does not have a default template, so you must always define template for it by overriding defaultTemplate()</p>
 
 <h3>View</h3>
-<p>With View you does not necessarily have to extend it when using. View has a default template which will output a &lt;div&gt; element.</p>
+<p>With View you don''t necessarily have to extend it when using. View has a default template which will output a &lt;div&gt; element.</p>
 
 <p>View adds several useful methods which can easily change the output without providing a new template:<ul>
   <li><a href="/dox/html/class_view.html#a2193ae9420d4227a233ac136d14c9407">setElement</a> - change which HTML element is used.</li>
